k8s/components/unpkg-web-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: unpkg-web-backend
  labels:
    app: unpkg-web-backend
    tier: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: unpkg-web-backend
      tier: web
  template:
    metadata:
      labels:
        app: unpkg-web-backend
        tier: web
    spec:
      containers:
      - name: unpkg-web-backend
        image: gcr.io/unpkg-190806/unpkg-test:latest
        command: ["node", "server.js"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          - containerPort: 5000
        # volumeMounts:
        #   - name: npm-disk-cache-storage
        #     mountPath: /var/lib/npm

      # volumes:
      #   - name: npm-disk-cache-storage
      #     gcePersistentDisk:
      #       pdName: unpkg-test-disk
      #       fsType: ext4
