k8s/components/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: unpkg-web
  labels:
    app: unpkg-web
spec:
  backend:
    serviceName: unpkg-web-backend
    servicePort: 5000
